--- a/Project2/frontend/package.json
+++ b/Project2/frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "6.22"
+    "react-router-dom": "6.22",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
